Sealed interfaces, Java sealed, Java records! (#79)
* Add EAP repo plus exlude samples

* Don't use ksp in non-ksp codegen for now

* Add eap

* Use toolchains for versions

* Stub kotlin sealed interfaces test project

* Configure more CI

* Wire deps

* Another eap

* Stub some java projects

* Implement RecordsJsonAdapterFactory

* Implement JavaSealedJsonAdapterFactory

* Update README

* Fix logic

* Fix missing equality

* Gate 15

* CI updates

* Fix logic

* Remove Kotlin 1.4.30 for now

* Tweak README

* Objects equals

* Move tests to samples as integration so junit is happy